--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>hi</h1>
+<DOCTYPE HTML>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="Temp_page.css">
+	<title>Newnottakenname</title>
+	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+</head>
+<body>
+	<div class=divtemp>
+		<p class=largest> <i>Something is coming</i> </p>
+		<p class=larger> Soon </p>
+		<p style="position: absolute; bottom: 0; left: 10%; width: 90%;"><span style="font-size: 75%; font-weight: bold;">Martijn Steenbergen</span></p>
+	</div>
+</body>
+</html>
