Cadeau voor joris begonnen

--- a/Main/index.html
+++ b/Main/index.html
@@ -20,7 +20,7 @@
         <div id=leftcontent>
             <div id="content-Delft">
                 <div class="r-balk balk"></div>
-                <div class=circle id=picture-Delft></div>      
+                <div class="circle" id="picture-Delft"></div>      
             </div>    
         </div>
         <div id=timeline></div>
