--- a/CadeauJoris.html
+++ b/CadeauJoris.html
@@ -8,6 +8,10 @@
 	
 <html><body>
     <div class="all">
-    <h1>VAN MIJ EN PAP</h1>
+        <a href="https://www.youtube.com/watch?v=e_q-s3QdmU8">
+        <div class="tekst">
+                <h1>VAN MIJ EN PAP</h1> 
+        </div>
+        </a>
     </div>
 </body></html>
