--- a/Uni/index.html
+++ b/Uni/index.html
@@ -3,7 +3,6 @@
 	<link rel="stylesheet" type="text/css" href="bestanden/BasicTemplate.css">
     <link rel="stylesheet" type="text/css" href="bestanden/CurrentTemplate.css">
     <script src="http://code.jquery.com/jquery-2.1.0.js" type="text/javascript"></script>
-	<script src="bestanden/balk.js" type="text/javascript"></script>
     <script src="bestanden/CurrentJavascript.js" type="text/javascript"></script>
 	<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans|Cabin' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Homenaje' rel='stylesheet' type='text/css'>
@@ -11,15 +10,9 @@
 </head>
 	
 <html><body>
-	<div class=header>
-		<p class=headertekst><a href="http://nntn.nl/">NNTN</a></p>
-		<div class=headerbutton><a href="http://uni.nntn.nl/">
-			<p class=headerbuttontext> UNIVERSITEIT </p>
-		</div></a>
-		<div class=headerbutton><a href="http://beta.nntn.nl/">
-			<p class=headerbuttontext> BETA VERSIE </p>
-		</div></a>
-	</div>
+    <div> 
+        <object type="text/html" data="http://nntn.nl/basics/header.html" width="100%" height="200px"></object>
+    </div>
     <div class=headerdoc></div>
     <div id=content>
         <a href='AboutMe/'><div class="folder">
