--- a/Uni/index.html
+++ b/Uni/index.html
@@ -1,6 +1,5 @@
 <head>
     <title>Universiteit</title>
-	<link rel="stylesheet" type="text/css" href="bestanden/BasicTemplate.css">
     <link rel="stylesheet" type="text/css" href="bestanden/CurrentTemplate.css">
     <script src="http://code.jquery.com/jquery-2.1.0.js" type="text/javascript"></script>
     <script src="bestanden/CurrentJavascript.js" type="text/javascript"></script>
@@ -11,7 +10,7 @@
 	
 <html><body>
     <div> 
-        <object type="text/html" data="http://nntn.nl/basics/header.html" width="100%" height="200px"></object>
+        <object type="text/html" data="http://nntn.nl/basics/header/" width="100%" height="200px"></object>
     </div>
     <div class=headerdoc></div>
     <div id=content>
