--- a/basics/header/index.html
+++ b/basics/header/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-	<link rel="stylesheet" type="text/css" href="bestanden/BasicTemplate.css">
+	<link rel="stylesheet" type="text/css" href="BasicTemplate.css">
     <script src="http://code.jquery.com/jquery-2.1.0.js" type="text/javascript"></script>
-	<script src="bestanden/BasicJavascript.js" type="text/javascript"></script>
+	<script src="BasicJavascript.js" type="text/javascript"></script>
 	<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans|Cabin' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Homenaje' rel='stylesheet' type='text/css'>
 </head>
