--- a/Uni/index.html
+++ b/Uni/index.html
@@ -1,6 +1,7 @@
 <head>
     <title>Universiteit</title>
     <link rel="stylesheet" type="text/css" href="bestanden/CurrentTemplate.css">
+    <link rel="stylesheet" type="text/css" href="bestanden/BasicTemplate.css">
     <script src="http://code.jquery.com/jquery-2.1.0.js" type="text/javascript"></script>
     <script src="bestanden/CurrentJavascript.js" type="text/javascript"></script>
 	<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans|Cabin' rel='stylesheet' type='text/css'>
@@ -9,8 +10,8 @@
 </head>
 	
 <html><body>
-    <div> 
-        <object type="text/html" data="http://nntn.nl/basics/header/" width="100%" height="200px"></object>
+    <div margin=0> 
+        <object type="text/html" data="http://nntn.nl/basics/header/" width="100%" height="10%" margin=0></object>
     </div>
     <div class=headerdoc></div>
     <div id=content>
