--- a/fsWP/index.html
+++ b/fsWP/index.html
@@ -1,7 +1,8 @@
 <head>
     <title>Followshows for WP</title>
     <link rel="stylesheet" type="text/css" href="Style.css">
-
+    <script src="http://code.jquery.com/jquery-2.1.0.js" type="text/javascript"></script>
+    <script src="Javascript.js" type="text/javascript"></script>
 </head>
 	
 <html><body>
@@ -11,15 +12,21 @@
     <div class=content>
         <div class=download>Download</div>
         <div class=cTitel>Made for the Windows Phone platform</div>
-        
+            <div class=cText>
+                FollowShows is the easiest way to keep track of when all your favorite shows are airing. Easily track what shows you have watched and which episodes are on next. You can configure notifications so you never miss another episode again. Want to know when game of thrones comes back? We got you covered.
+            </div>
         <div class=cTitel>Screenshots</div>
-        <ul class=screenshots>
+        <ul id=screenshots>
             <li><img src="img/queue.png" class=sShot></li>
             <li><img src="img/tracker.png" class=sShot></li>
             <li><img src="img/showpage.jpg" class=sShot></li>
             <li><img src="img/showpage_extended.jpg" class=sShot></li>
             <li><img src="img/login.png" class=sShot></li>
             <li><img src="img/facebook_login.png" class=sShot></li>
+        </ul>
+        <div class=cTitel>Features</div>
+        <ul>
+            <li>Login with facebook/email</li>
         </ul>
     </div>
 </body></html>
