Start on features

--- a/fsWP/index.html
+++ b/fsWP/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html/>
 <head>
     <title>Followshows for WP</title>
     <link rel="stylesheet" type="text/css" href="Style.css">
@@ -5,7 +6,7 @@
     <script src="Javascript.js" type="text/javascript"></script>
 </head>
 	
-<html><body>
+<body>
     <div class=title>
         Introducing followshows for Windows Phone
     </div>
@@ -25,8 +26,10 @@
             <li><img src="img/facebook_login.png" class=sShot></li>
         </ul>
         <div class=cTitel>Features</div>
-        <ul>
-            <li>Login with facebook/email</li>
+        <ul id=features>
+            <li>-  No ads, no premium version, no paywall</li>
+            <li>-  Login with facebook/email</li>
+            <li>-  Offline queue and tracker</li>
         </ul>
     </div>
-</body></html>
+</body>
