--- a/fsWP/index.html
+++ b/fsWP/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html/>
+<!DOCTYPE html>
 <head>
     <title>Followshows for WP</title>
     <link rel="stylesheet" type="text/css" href="Style.css">
@@ -12,11 +12,15 @@
     </div>
     <div class=content>
         <div class=download>Download</div>
-        <div class=cTitel>Made for the Windows Phone platform</div>
+        <div class=cTitel>
+            Made for the Windows Phone platform
+        </div>
             <div class=cText>
                 FollowShows is the easiest way to keep track of when all your favorite shows are airing. Easily track what shows you have watched and which episodes are on next. You can configure notifications so you never miss another episode again. Want to know when game of thrones comes back? We got you covered.
             </div>
-        <div class=cTitel>Screenshots</div>
+        <div class=cTitel>
+            Screenshots
+        </div>
         <ul id=screenshots>
             <li><img src="img/queue.png" class=sShot></li>
             <li><img src="img/tracker.png" class=sShot></li>
@@ -25,7 +29,9 @@
             <li><img src="img/login.png" class=sShot></li>
             <li><img src="img/facebook_login.png" class=sShot></li>
         </ul>
-        <div class=cTitel>Features</div>
+        <div class=cTitel>
+            Features
+        </div>
         <ul id=features>
             <li>-  No ads, no premium version, no paywall</li>
             <li>-  Login with facebook/email</li>
