Trying to fix feature list

--- a/fsWP/index.html
+++ b/fsWP/index.html
@@ -33,9 +33,9 @@
             Features
         </div>
         <ul id=features>
-            <li>-  No ads, no premium version, no paywall</li>
-            <li>-  Login with facebook/email</li>
-            <li>-  Offline queue and tracker</li>
+            <li>No ads, no premium version, no paywall</li>
+            <li>Login with facebook/email</li>
+            <li>Offline queue and tracker</li>
         </ul>
     </div>
 </body>
