Trying to fix featurelist

--- a/fsWP/index.html
+++ b/fsWP/index.html
@@ -32,10 +32,21 @@
         <div class=cTitel>
             Features
         </div>
+        <div style="margin:"></div>
         <ul id=features>
-            <li>No ads, no premium version, no paywall</li>
-            <li>Login with facebook/email</li>
-            <li>Offline queue and tracker</li>
+            <li>
+                No ads, no premium version, no paywall
+            </li>
+            <li>
+                Login with facebook/email
+            </li>
+            <li>
+                Offline queue and tracker
+            </li>
+        
         </ul>
+        <div class=cText></div>
+        <div class=cText></div>
+        <div class=cText></div>
     </div>
 </body>
