Trying to fix featurelist
Stepped from list to <br>

--- a/fsWP/index.html
+++ b/fsWP/index.html
@@ -33,6 +33,7 @@
             Features
         </div>
         <div style="margin:"></div>
+<!--
         <ul id=features>
             <li>
                 No ads, no premium version, no paywall
@@ -45,7 +46,12 @@
             </li>
         
         </ul>
-        <div class=cText></div>
+-->
+        <div class=cText>
+                No ads, no premium version, no paywall <br>
+                Login with facebook/email<br>
+                Offline queue and tracker<br>            
+        </div>
         <div class=cText></div>
         <div class=cText></div>
     </div>
