Start on bottom bar

--- a/fsWP/index.html
+++ b/fsWP/index.html
@@ -32,27 +32,21 @@
         <div class=cTitel>
             Features
         </div>
-        <div style="margin:"></div>
-<!--
-        <ul id=features>
-            <li>
-                No ads, no premium version, no paywall
-            </li>
-            <li>
-                Login with facebook/email
-            </li>
-            <li>
-                Offline queue and tracker
-            </li>
-        
-        </ul>
--->
         <div class=cText>
-                No ads, no premium version, no paywall <br>
-                Login with facebook/email<br>
-                Offline queue and tracker<br>            
+                - No ads, no premium version, no paywall <br/>
+                - Login with facebook/email<br/>
+                - Offline queue and tracker<br/>            
         </div>
-        <div class=cText></div>
-        <div class=cText></div>
+        <div class=bottom>
+                <div class=bottomItem>Email</div>
+<!--                    <div class=dash>-</div>-->
+                <div class=bottomItem>View code</div>
+<!--                    <div class=dash>-</div>-->
+                <div class=bottomItem>Report bugs</div>
+<!--                    <div class=dash>-</div>-->
+                <div class=bottomItem>Vote for new features</div>
+            Made by newnottakenname
+        </div>
+
     </div>
 </body>
