--- a/fsWP/index.html
+++ b/fsWP/index.html
@@ -47,6 +47,6 @@
                 <div class=bottomItem>Vote for new features</div>
             Made by newnottakenname
         </div>
-        Last updated: now
+        Last updated: sometime
     </div>
 </body>
