MK 15: This might just be it

--- a/fsWP/index.html
+++ b/fsWP/index.html
@@ -37,16 +37,14 @@
                 - Login with facebook/email<br/>
                 - Offline queue and tracker<br/>            
         </div>
-        <div class=bottom>
-                <div class=bottomItem>Email</div>
-<!--                    <div class=dash>-</div>-->
-                <div class=bottomItem>View code</div>
-<!--                    <div class=dash>-</div>-->
-                <div class=bottomItem>Report bugs</div>
-<!--                    <div class=dash>-</div>-->
-                <div class=bottomItem>Vote for new features</div>
-            Made by newnottakenname
-        </div>
-        Last updated: sometime a
+            <table class=bottom>
+                <tr>
+                    <td class=bottomItem>Report bugs</td>
+                    <td class=bottomItem>Vote for new features</td>                    
+                    <td class=bottomItem>Email</td>
+                    <td class=bottomItem>View code</td>
+                </tr>
+            </table>
+<!--            Made by newnottakenname-->
     </div>
 </body>
