If no bugs fsWP is finished

--- a/fsWP/index.html
+++ b/fsWP/index.html
@@ -11,7 +11,7 @@
         Introducing followshows for Windows Phone
     </div>
     <div class=content>
-        <div class=download>Download</div>
+        <div class=download><a>Download</a></div>
         <div class=cTitel>
             Made for the Windows Phone platform
         </div>
@@ -39,10 +39,10 @@
         </div>
             <table class=bottom>
                 <tr>
-                    <td class=bottomItem>Report bugs</td>
-                    <td class=bottomItem>Vote for new features</td>                    
-                    <td class=bottomItem>Email</td>
-                    <td class=bottomItem>View code</td>
+                    <td class=bottomItem><a href="https://followshowswp.uservoice.com/">Report bugs</a></td>
+                    <td class=bottomItem><a href="https://followshowswp.uservoice.com/">Vote for new features</a></td>                    
+                    <td class=bottomItem><a href="mailto:followshows@nntn.nl">Email</a></td>
+                    <td class=bottomItem><a href="https://github.com/newnottakename/FollowshowsWP">View code</a></td>
                 </tr>
             </table>
 <!--            Made by newnottakenname-->
