--- a/uni/index.html
+++ b/uni/index.html
@@ -1,18 +1,19 @@
 <head>
     <title>Universiteit</title>
     <link rel="stylesheet" type="text/css" href="bestanden/CurrentTemplate.css">
-    <link rel="stylesheet" type="text/css" href="bestanden/BasicTemplate.css">
     <script src="http://code.jquery.com/jquery-2.1.0.js" type="text/javascript"></script>
     <script src="bestanden/CurrentJavascript.js" type="text/javascript"></script>
 	<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans|Cabin' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Homenaje' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+    <script>
+        $(function () {
+            $("#header").load("bestanden/Bovenbalk.html");
+        });
+    </script>
 </head>
 	
 <html><body>
-    <div margin=0> 
-        <object type="text/html" data="http://nntn.nl/basics/header/" width="100%" height="10%" margin=0></object>
-    </div>
     <div class=headerdoc></div>
     <div id=content>
         <a href='AboutMe/'><div class="folder">
@@ -61,4 +62,5 @@
             </p>
         </div></a>
     </div>
+    <div id=header></div>
 </body></html>
