--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <div>
      <div class="block1 contentB">
-        <img src="bestanden/wiebenik2.jpg" class=image id=img1>
+        <img src="bestanden/wiebenik2.JPG" class=image id=img1>
         <div class="contentBText block1" id=block1>
             <div class="contentTitle cTr" >
                     Who am I?
