Fixed about part

--- a/beta/index.html
+++ b/beta/index.html
@@ -30,19 +30,19 @@
         </div>
     </div>
 
-
-
     <div id=content2>
-        <h2>Who am I?</h2>
-        <div id=l1 class=line></div>
-        <p class=description>Hi. I am Martijn.
+        <!--        <h2>Who am I?<div id=l1 class=line></div></h2>-->
+
+        <p class=description><span class=desBig>Hi, </span> My name is Martijn Steenbergen
             <br>I am a student at the TU Delft studying computer sciences. I know HTML, Java and C#.
             <br>I am fascinated with design, how the world works and everything else.</p>
-
+        <!--        <h2>My Projects<div id=l2 class=line></div></h2>-->
     </div>
+
+
     <div>
-        <h2>My Projects</h2>
-        <div id=l2 class=line></div>
+
+
 
         <div id=project1>
             <img src="bestanden/StartScreen.png" class=phone></img>
@@ -59,22 +59,22 @@
     </div>
 
     <div id=social>
-        <div class=socitem>
+        <a class=socitem href="mailto:nntn@nntn.nl">
             <div class=soccirc></div>
             <img src="bestanden/mail.png" class=socimg></img>
             <p class=socdesc>Email</p>
 
-        </div>
-        <div class=socitem>
+        </a>
+        <a class=socitem href="https://www.facebook.com/martijn.steenbergen.353" target="_blank">
             <div class=soccirc></div>
             <img src="bestanden/facebook.png" class=socimg></img>
             <p class=socdesc>Facebook</p>
-        </div>
-        <div class=socitem>
+        </a>
+        <a class=socitem href="https://github.com/newnottakename" target="_blank">
             <div class=soccirc></div>
             <img src="bestanden/github.png" class=socimg></img>
             <p class=socdesc>Github</p>
-        </div>
+        </a>
 
         <div id=disclaimer>
             Newnottakenname | Sponsored By: Jenneke Ringnalda | Hosted by: Github | All rights reserved
