Prepared for release 2.0

--- a/beta/index.html
+++ b/beta/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div id=content1 class=hoog>
+    <div id=content1 class="hoog oneheight">
         <div id=titleBox>
             <h1 id=name>
                 MARTIJN STEENBERGEN
@@ -44,12 +44,12 @@
 
 
 
-        <div id=project1>
-            <img src="bestanden/StartScreen.png" class=phone></img>
+        <div id=project1 class=80height>
+            <img src="bestanden/StartScreen.png" id=phone></img>
             <h3 id=p1>Followshows</h3>
             <p class=show1des>Easily keep track of when your shows are on next.</p>
         </div>
-        <div id=project2>
+        <div id=project2 class=80height>
             <h3 id=p2>This website</h3>
             <p class=show2des>NNTN</p>
 
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <div id=social>
+    <div id=social class=gheight>
         <a class=socitem href="mailto:nntn@nntn.nl">
             <div class=soccirc></div>
             <img src="bestanden/mail.png" class=socimg></img>
