Small fix for wrong Height of Website "This"

--- a/beta/index.html
+++ b/beta/index.html
@@ -47,7 +47,7 @@
         <div id=project1 class=80height>
             <img src="bestanden/StartScreen.png" id=phone></img>
             <h3 id=p1>Followshows</h3>
-            <p class=show1des>Easily keep track of when your shows are on next.</p>
+            <p class=show1des>Easily keep track of when your shows are on next. Made for Windows Phone</p>
         </div>
         <div id=project2 class=80height>
             <h3 id=p2>This website</h3>
