Finishing the desktop experience

--- a/beta/index.html
+++ b/beta/index.html
@@ -30,61 +30,79 @@
         </div>
     </div>
 
-    <div id=content2>
-        <!--        <h2>Who am I?<div id=l1 class=line></div></h2>-->
 
-        <p class=description><span class=desBig>Hi, </span> My name is Martijn Steenbergen
-            <br>I am a student at the TU Delft studying computer sciences. I know HTML, Java and C#.
-            <br>I am fascinated with design, how the world works and everything else.</p>
-        <!--        <h2>My Projects<div id=l2 class=line></div></h2>-->
+
+
+    <div id=page>
+
+        <div>
+            <div id=content2>
+                <!--        <h2>Who am I?<div id=l1 class=line></div></h2>-->
+
+                <p class=description><span class=desBig>Hi, </span> My name is Martijn Steenbergen
+                    <br>I am a student at the TU Delft studying computer sciences. I know HTML, Java and C#.
+                    <br>I am fascinated with design, how the world works and everything else.</p>
+                <!--        <h2>My Projects<div id=l2 class=line></div></h2>-->
+            </div>
+
+            <div id=project1 class=80height>
+                <img src="bestanden/StartScreen.png" id=phone></img>
+                <h3 id=p1>Followshows</h3>
+                <p class=show1des>Easily keep track of when your shows are on next. Made for Windows Phone</p>
+            </div>
+            <div id=project2 class=80height>
+                <h3 id=p2>nntn.nl</h3>
+                <p id=p2under>An ungoing quest to create a beautiful website</p>
+                <div class=show2des>
+                    <p class=code>&lt;head&gt;</p>
+                    <p style="text-indent: 1em;"><span class=code>&lt;title&gt;</span>Newnottakenname<span class=code>&lt;/title&gt;</span>
+                    </p>
+                    <p style="text-indent: 1em;" class="code">&lt;script&gt;</p>
+                    <p style="text-indent: 2em;">$(function () {</p>
+                    <p style="text-indent: 3em;">$(<span class=code>&quot;#header&quot;</span>).load(<span class=code>&quot;bestanden/Bovenbalk.html&quot;</span>);</p>
+                    <p style="text-indent: 2em;">});</p>
+                    <p style="text-indent: 1em;" class="code">&lt;/script&gt;</p>
+                    <p style="text-indent: 0em;" class="code">&lt;/head&gt;</p>
+                </div>
+            </div>
+        </div>
+
+        <div id=social class=gheight>
+            <h3 id=p3>Contact me</h3>
+
+            <div class=socitems>
+                <a class="socitem een " href="mailto:nntn@nntn.nl ">
+                    <div class=soccirc></div>
+                    <img src="bestanden/mail.png " class=socimg></img>
+                    <p class=socdesc>Email</p>
+
+                </a>
+                <a class="socitem twee " href="https://www.facebook.com/martijn.steenbergen.353 " target="_blank ">
+                    <div class=soccirc></div>
+                    <img src="bestanden/facebook.png " class=socimg></img>
+                    <p class=socdesc>Facebook</p>
+                </a>
+                <a class="socitem drie " href="https://github.com/newnottakename " target="_blank ">
+                    <div class=soccirc></div>
+                    <img src="bestanden/github.png " class=socimg></img>
+                    <p class=socdesc>Github</p>
+                </a>
+            </div>
+
+
+            <div id=disclaimer>
+                Newnottakenname | Sponsored By: Jenneke Ringnalda | Hosted by: Github | All rights reserved
+            </div>
+        </div>
+
+
     </div>
 
 
-    <div>
-
-
-
-        <div id=project1 class=80height>
-            <img src="bestanden/StartScreen.png" id=phone></img>
-            <h3 id=p1>Followshows</h3>
-            <p class=show1des>Easily keep track of when your shows are on next. Made for Windows Phone</p>
-        </div>
-        <div id=project2 class=80height>
-            <h3 id=p2>This website</h3>
-            <p class=show2des>NNTN</p>
-
-
-
-        </div>
-    </div>
-
-    <div id=social class=gheight>
-        <a class=socitem href="mailto:nntn@nntn.nl">
-            <div class=soccirc></div>
-            <img src="bestanden/mail.png" class=socimg></img>
-            <p class=socdesc>Email</p>
-
-        </a>
-        <a class=socitem href="https://www.facebook.com/martijn.steenbergen.353" target="_blank">
-            <div class=soccirc></div>
-            <img src="bestanden/facebook.png" class=socimg></img>
-            <p class=socdesc>Facebook</p>
-        </a>
-        <a class=socitem href="https://github.com/newnottakename" target="_blank">
-            <div class=soccirc></div>
-            <img src="bestanden/github.png" class=socimg></img>
-            <p class=socdesc>Github</p>
-        </a>
-
-        <div id=disclaimer>
-            Newnottakenname | Sponsored By: Jenneke Ringnalda | Hosted by: Github | All rights reserved
-        </div>
-    </div>
 
 
 
 
-
-    <div id=header>
+    <div id=headerh></div>
 
 </body>
