Fixing small things

--- a/beta/index.html
+++ b/beta/index.html
@@ -8,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="css.css">
+    <link rel="stylesheet" type="text/css" href="bestanden/skeleton.css">
     <script src="http://code.jquery.com/jquery-2.1.0.js" type="text/javascript"></script>
     <script>
         $(function () {
@@ -37,10 +38,10 @@
     <div id=page>
 
         <div style="margin-top: -5px">
-            <div id=content2>
+            <div id="content2">
                 <!--        <h2>Who am I?<div id=l1 class=line></div></h2>-->
 
-                <p class=description><span class=desBig>Hi, </span> My name is Martijn Steenbergen
+                <p class="description"><span class=desBig>Hi, </span> My name is Martijn Steenbergen
                     <br>I am a student at the TU Delft studying computer sciences. I know HTML, Java and C#.
                     <br>I am fascinated with design, how the world works and everything else.</p>
                 <!--        <h2>My Projects<div id=l2 class=line></div></h2>-->
@@ -68,11 +69,11 @@
             </div>
         </div>
 
-        <div id=social>
+        <div id="social container">
             <h3 id=p3>Contact me</h3>
 
-            <div class=socitems>
-                <a class="socitem" href="mailto:nntn@nntn.nl ">
+            <div class="socitems row">
+                <a class="socitem one-third column" href="mailto:nntn@nntn.nl ">
                     <div class=soccirc>
                         <p class=socdesc>Email</p>
                     </div>
@@ -80,14 +81,14 @@
                     
 
                 </a>
-                <a class="socitem" href="https://www.facebook.com/martijn.steenbergen.353 " target="_blank ">
+                <a class="socitem one-third column" href="https://www.facebook.com/martijn.steenbergen.353 " target="_blank ">
                     <div class=soccirc>
                         <p class=socdesc>Facebook</p>
                     </div>
                     <img src="bestanden/facebook.png " class=socimg></img>
                     
                 </a>
-                <a class="socitem" href="https://github.com/newnottakename " target="_blank ">
+                <a class="socitem one-third column" href="https://github.com/newnottakename " target="_blank ">
                     <div class=soccirc>
                         <p class=socdesc>Github</p>
                     </div>
