Image is now jpeg = compressed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ MARTIJN STEENBERGEN
                 " We 're all stories in the end. Just make it a good one."
             </p>
         </div>
-        <img src="bestanden/wiebenik.JPG" id=imgc1></img>
+        <img src="bestanden/wiebenik.jpeg" id=imgc1></img>
     </div>
     <div id=page>
         <div style="margin-top: -5px">
