Finally fixed spelling mistake. Thanks @TimvdLippe

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ MARTIJN STEENBERGEN
             <div id=project2>
                 <div class="u-pull-right title2">
                     <h3 id=p2>nntn.nl</h3>
-                    <p id=p2under>An ungoing quest to create a beautiful website</p>
+                    <p id=p2under>An ongoing quest to create a beautiful website</p>
                 </div>
                 <div class="container show2des">
                     <p class=code>&lt;head&gt;</p>
