--- a/liam/index.html
+++ b/liam/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div id="background">
-        <iframe id="background-player" width="560" height="315" src="https://www.youtube.com/embed/92AuwuSmlVA?rel=0&controls=0&autoplay=1&modestbranding=1&showinfo=0"
+        <iframe id="background-player" width="560" height="315" src="https://www.youtube.com/embed/92AuwuSmlVA?rel=0&controls=0&autoplay=1&modestbranding=1&showinfo=0&loop=1"
          frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
         <div id="cover">
@@ -22,7 +22,7 @@
         <div id="ticket" class="page">
             <p>We hereby offer you</p>
             <h1>One free ticket to Walibi</h1>
-            <p>From Martijn Steenbergen, etc.</p>
+            <p>From Tim van der Lippe, Thomas Smith and Martijn Steenbergen</p>
         </div>
         <div id="availability" class="page">
             <h1>Our availability</h1>
