--- a/liam/index.html
+++ b/liam/index.html
@@ -13,8 +13,7 @@
 <body>
 
     <div id="background">
-        <iframe id="background-player" width="1920" height="1080" src="https://www.youtube.com/embed/nmeILc26TfE?rel=0&start=25&controls=0&autoplay=1&modestbranding=1&showinfo=0&loop=1"
-         frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <video src="files/intro.mp4" autoplay loop></video>
     </div>
     <div id="cover">
         <h1>HAPPY BIRTHDAY LIAM</h1>
@@ -26,7 +25,7 @@
     </div>
     <div id="availability" class="page">
         <h1>Our availability</h1>
-        <embed id="doodle" src="https://doodle.com/poll/bad6kxyed8rddute" height="900px" width="400px" frameborder="0" allow="autoplay; encrypted-media"></embed>
+        <embed id="doodle" src="https://doodle.com/poll/bad6kxyed8rddute" height="900px" frameborder="0" allow="autoplay; encrypted-media"></embed>
     </div>
     <div id="confetti"></div>
 </body>
