--- a/liam/index.html
+++ b/liam/index.html
@@ -21,7 +21,7 @@
     <div id="ticket" class="page">
         <p>We hereby offer you</p>
         <h1>One free ticket to Walibi</h1>
-        <p>From Tim van der Lippe, Thomas Smith, Martijn Steenbergen, Jean de Leeuw, Martijn Gribnau, Thomas Overklift, Chak Shun Yu and &quot;uhh ik&quot;.</p>
+        <p>From Tim van der Lippe, Thomas Smith, Martijn Steenbergen, Jean de Leeuw, Martijn Gribnau, Thomas Overklift, Chak Shun Yu and Chris Langhout.</p>
     </div>
     <div id="availability" class="page">
         <h1>Our availability</h1>
