default hide shown email

--- a/invite/index.html
+++ b/invite/index.html
@@ -18,9 +18,9 @@
             <h3 id=event-time></h2>
             <div id="email">
                 <h2>Please write down your email</h2>
-                <input id="forms" type="text" placeholder="example@example.org" onkeydown="this.submit" onsubmit="submit">
+                <input id="forms" type="email" placeholder="example@example.org" onkeydown="this.submit" onsubmit="submit">
             </div>
-            <div id="email-check">
+            <div id="email-check" class=hide>
                 <p>Your email is <span id="email-value">insert email</span></p>
                 <button id="email-change">change</button>
             </div>
