--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>NNTN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="I am a student at the TU Delft studying computer sciences. I do everything with software engineering. I am fascinated with design, how the world works and everything else. " />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Martijn Steenbergen" />
+    <meta name="twitter:description"
+        content="I am a student at the TU Delft studying computer sciences. I do everything with software engineering. I am fascinated with design, how the world works and everything else. " />
+    <meta name="twitter:site" content="@mjwsteenbergen">
+    <meta name="twitter:creator" content="@mjwsteenbergen">
+    <meta name="twitter:image" content="https://nntn.nl/profile.jpg">
+    <meta property="og:site_name" content="NNTN" />
+    <meta property="og:title" content="Martijn Steenbergen" />
+    <meta property="og:description"
+        content="I am a student at the TU Delft studying computer sciences. I do everything with software engineering. I am fascinated with design, how the world works and everything else. " />
     <link rel="stylesheet" type="text/css" media="screen" href="files/main.css" />
     <script src="main.js"></script>
 </head>
