--- a/index.html
+++ b/index.html
@@ -41,44 +41,55 @@
     <div id=projects>
         <h1>My Projects</h1>
         <div id=project-container>
-            <a class=project href="https://github.com/mjwsteenbergen/mjwsteenbergen.github.io" target="blank">
-                <h2>NNTN</h2>
-                <p>The ongoing quest to create a beautiful website</p>
-            </a>
-            <a class=project href="https://gpd.today/" target="blank">
-                <h2>Getting projects done today</h2>
-                <p>For the final bachelors project a cross-platform app was built for iOS and Android built with Ionic2 and
-                    Angular 2 while using scrum to build a great experience. The app features gamification and offline storage</p>
-            </a>
-            <a class=project href="https://github.com/mjwsteenbergen/TelegramBot" target="blank">
-                <h2>TelegramBot</h2>
-                <p>A bot that can be deployed on azure that will respond to all your queries. It is stateless, but is able to
-                    keep data using uri's</p>
-            </a>
-            <a class=project href="https://github.com/mjwsteenbergen/FollowshowsWP" target="blank">
-                <h2>Followshows</h2>
-                <p>As a side project, to get some practical experience with the Windows Phone platform, I created a 3rd party
-                    app Followshows for Windows Phone. Followshows is an existing service to track your favorite TV-shows.
-                    The app features full integration with the service, offline storage and is completely open source on
-                    GitHub.</p>
-            </a>
+            <div class=project>
+                <iframe class=img src="https://nntn.nl"></iframe>
+                <div class=desc>                
+                    <h2>NNTN</h2>
+                    <p>The ongoing quest to create a beautiful website</p>
+                    <a href="https://github.com/mjwsteenbergen/mjwsteenbergen.github.io" target="blank">Read more</a>
+                </div>
+            </div>
+            <div class=project href="https://gpd.today/" target="blank">
+                <div class=img style="background-image: url('files/project-pic/markender.jpg')"></div>
+                <div class=desc>
+                    <h2>Markender</h2>
+                    <p>WebComponents to enhance your reports</p>
+                    <a href="https://github.com/mjwsteenbergen/markender" target="blank">Read more</a>
+                </div>
+            </div>
+            <div class=project>
+                <div class=img style="background-image: url('files/project-pic/Ares.jpg')"></div>
+                <div class=desc>
+                    <h2>Ares</h2>
+                    <p>A chatbot to quickly excecute automations</p>
+                    <a href="https://medium.com/@newnottakenname/the-architecture-of-my-life-c286964eb2c1" target="blank">Read more</a>
+                </div>
+            </div>
+            <div class=project>
+                <div class=img style="background-image: url('files/project-pic/playlister.png')"></div>
+                <div class=desc>
+                    <h2>Playlister</h2>
+                    <p>Generate amazing playlists using the Spotify API</p>
+                    <a href="https://medium.com/@newnottakenname/the-architecture-of-my-life-c286964eb2c1" target="blank">Read more</a>
+                </div>
+            </div>
         </div>
     </div>
     <div id=contactme>
-        <h1>Links</h1>
+        <!-- <h1>Links</h1> -->
 
         <div id=contactmecontainer>
             <a href="https://www.linkedin.com/in/mjwsteenbergen/" target="blank">
-                <img src="./files/In-2C-128px-R.png">
+                <img src="./files/logos/logo-linkedin.svg">
             </a>
             <a href="https://twitter.com/newnottakenname" target="blank">
-                <img src="./files/Twitter_Logo_Blue.png">
+                <img src="./files/logos/logo-twitter.svg">
             </a>
             <a href="http://t.me/newnottakenname" target="blank">
-                <img src="./files/Telegram.png">
+                <img src="./files/logos/paper-plane-sharp.svg">
             </a>
             <a href="https://github.com/mjwsteenbergen/" target="blank">
-                <img src="./files/github.png">
+                <img src="./files/logos/logo-github.svg">
             </a>
 
         </div>
